# a-maz-ing

./: .gitignore  Makefile  README.md  __main__.py  a_maze_ing.py  config.txt  config_parser.py  explain.txt  hex_encoder.py  maze.py  maze.txt  maze_drawer.py  mazegen.py  mazegen_algorithm.py  mazegen_yassen.py  mazegennotperfect.py  output_maze.txt  packige.txt  pattern_42.py  pyproject.toml  solver.py  t.py  test.py  test3.py  test_drawer.py  themes.py
NOT_NOW/: ascii_renderer.py
maze_tools/mlx_CLXV-2.2/mlx_CLXV/: LICENSE  Makefile  README.md  configure.sh  pybuild.sh
maze_tools/mlx_CLXV-2.2/mlx_CLXV/python/: README.md  pyproject.toml
maze_tools/mlx_CLXV-2.2/mlx_CLXV/src/: mlx_be_extra.c  mlx_be_gpu_hooks.c  mlx_config.h  mlx_do_sync.c  mlx_expose_hook.c  mlx_hook.c  mlx_image.c  mlx_init.c  mlx_internal.h  mlx_key_hook.c  mlx_loop.c  mlx_loop_hook.c  mlx_mouse_hook.c  mlx_png.c  mlx_string_put.c  mlx_window.c  mlx_xpm.c
maze_tools/mlx_CLXV-2.2/mlx_CLXV/src/backend/: mlx__xcb.h  mlx__xcb_anti_resize_win.c  mlx__xcb_event.c  mlx__xcb_event.h  mlx__xcb_extra.c  mlx__xcb_flush.c  mlx__xcb_hook.c  mlx__xcb_init.c  mlx__xcb_internal.h  mlx__xcb_loop.c  mlx__xcb_window.c  mlx__xcb_wmhints.h
maze_tools/mlx_CLXV-2.2/mlx_CLXV/src/gpu/: Makefile  mlx___vulkan.h  mlx___vulkan_draw.c  mlx___vulkan_image.c  mlx___vulkan_init.c  shader.frag  (+6 more)
maze_tools/mlx_CLXV-2.2/mlx_CLXV/test/: Makefile  main.c  speed.c
mazegen-package/: mazegen.py  mazegennotperfect.py  pattern_42.py  setup.py
mazegen_bogido.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: urses.py
