[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen-bogido"
version = "0.0.1"
authors = [
    {name = "mbougajd", email = "alice@example.com"},
    {name = "yboussif", email = "bob@example.com"}
]
description = "this is a good maze package"
requires-python = ">= 3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]